* 1.0.0 *

* Removed Ruby 1.9.3 from CI builds.
* CI now tests Azure too.
* Fixed compiler warnings on Darwin/OSX. Still a few on Windows.


* 0.7.0 *

* Refactor build of FreeTDS & Iconv recipes. Add OpenSSL. Merged #207.
* Ensure zero terminated strings, where C-str pointers are expected. Use StringValueCStr() Fixes #208.
* Revert 999fa571 so timeouts do not kill the client. Fixes #179.
* Remove `sspi_w_kerberos.diff` patch. Not needed anymore.
* Tested again on Azure. Added notes to README on recommended settings.
* Replace `rb_thread_blocking_region` (removed in Ruby 2.2.0) w/`rb_thread_call_without_gvl`. Fixes #182.
* Remove 30 char password warning. Fixes #172.
* Remove Ruby 1.8.6 support. We always use Time vs edge case DateTime.


* 0.6.2 *

* Support an optional environment variable to find FreeTDS. Fixes #128.
* Allow Support for 31+ Character Usernames/Passwords. Fixes #134. Thanks @wbond.
* Stronger Global VM Lock support for nonblocking connections. Fixes #133. Thanks @wbond.
* Timeout fix for working with Azure SQL. Fixes #138.
* Correctly handle requests that return multiple results sets via `.do`, such
  as backups and restores. Fixes #150.


* 0.6.1 *

Use both dbsetversion() vs. dbsetlversion. Partially reverts #62.


* 0.6.0 *

* Use dbsetversion() vs. dbsetlversion. Fixes #62.
* Remove Ruby 1.8 support.
* Implement misc rb_thread_blocking_region support. Fixes #121. Thanks @lepfhty.
* Test FreeTDS v0.91.89 patch release.
* Fix lost connection handling. Fixes #124. Thanks @krzcho.
* Remove unused variable. Fixes #103. Thanks @jeremyevans.
* Remove need to specify username for Windows Authentication.
* Use proper SQL for returning IDENTITY with Sybase. Fixes #95.
* Compile windows with `--enable-sspi`.
* Allow MiniPortile to build any FreeTDS version we need. Fixes #76.
* Always convert password option to string. Fixes #92.
* Move test system to real MiniTest::Spec. All tests pass on Azure too.